Update photo URLs to use GitHub links

--- a/home.html
+++ b/home.html
@@ -355,8 +355,8 @@
     <script>
         // --- PHOTO SETUP ---
         // PASTE YOUR LINKS BETWEEN THE QUOTES BELOW
-        const mercyPhotoUrl = "/home/jew/Documents/mrs powers/Screenshot_2025-12-25-05-02-09-067_com.miui.gallery.jpg"; 
-        const yourPhotoUrl = "/home/jew/Documents/mrs powers/wify1.jpg";
+        const mercyPhotoUrl = "https://github.com/Power829/powers/blob/main/Screenshot_2025-12-25-05-02-09-067_com.miui.gallery.jpg?raw=true"; 
+        const yourPhotoUrl = "https://github.com/Power829/powers/blob/main/wify1.jpg?raw=true";
 
         if (mercyPhotoUrl) {
             document.getElementById('mercy-photo-frame').innerHTML = `<img src="${mercyPhotoUrl}" alt="Mercy" onerror="this.style.display='none'">`;
